--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -8,13 +9,13 @@ html {
 }
 
 html,
-body {
+body,
+main {
   height: 100%;
 }
 
 main {
   width: 100%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,5 +28,59 @@ main {
 
   .c {
     opacity: 0;
+  }
+}
+
+.button__wrapper {
+  --width: 80px;
+  --height: 40px;
+  --color-border: #000;
+  --color-fill: #fff;
+  --border-width: 2px;
+
+  position: fixed;
+  bottom: 60px;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+
+  .button {
+    width: var(--width);
+    height: var(--height);
+    margin: 0 calc(var(--height) / 2);
+    border-radius: calc(var(--height) / 2);
+    box-shadow: 0 0 0 var(--border-width) var(--color-border);
+    transition: cubic-bezier(0.85, 0, 0.15, 1) 0.75s;
+
+    &__toggle {
+      width: var(--height);
+      height: var(--height);
+      border-radius: calc(var(--height) / 2);
+      border: var(--border-width) solid var(--color-fill);
+      background: var(--color-border);
+      transition: cubic-bezier(0.85, 0, 0.15, 1) 0.75s;
+    }
+
+    &[aria-pressed="true"] {
+      --color-border: #fff;
+      --color-fill: #000;
+
+      .button__toggle {
+        transform: translateX(calc(var(--width) - var(--height)));
+      }
+    }
+  }
+
+  .button__icon {
+    --width: 30px;
+    height: var(--height);
+
+    &--left {
+      width: var(--width);
+    }
+
+    &--right {
+      width: calc(var(--width) * 0.75);
+    }
   }
 }
